Try lower frequencies when fails to initialize sensor using default frequency for device motion event

Currently, the device motion/orientation event pump requests the sensor
data reporting frequency to be 60Hz. However on some devices, this
frequency is larger than the maximum frequency the device can provide.
This CL modifies device event pump code to try lower frequencies when
it fails to initialize sensor using the default frequency.

Bug: 796518
Change-Id: I1cd6215f3b35498482ed3ca26cd9b44d4eb7eb1e